--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "pack/git-plugins/start/vim-obsession"]
 	path = pack/git-plugins/start/vim-obsession
 	url = git://github.com/tpope/vim-obsession.git
+[submodule "pack/git-plugins/start/vim-snippets"]
+	path = pack/git-plugins/start/vim-snippets
+	url = https://github.com/honza/vim-snippets.git
